--- a/ADD/Dockerfile
+++ b/ADD/Dockerfile
@@ -1,6 +1,6 @@
 FROM almalinux:9
 RUN dnf install nginx -y
-RUN rm -f /usr/share/nginx/html/index.html
+RUN rm -rf /usr/share/nginx/html/index.html
 ADD https://github.com/khalidsk786/dockerfiles/blob/main/RUN/Dockerfile /usr/share/nginx/html/index.html
 RUN chmod +r /usr/share/nginx/html/index.html
 CMD ["nginx","-g","daemon off;"]
