--- a/EXPOSE/Dockerfile
+++ b/EXPOSE/Dockerfile
@@ -1,5 +1,5 @@
 FROM almalinux:9
 RUN dnf install nginx -y
 #there is no funtionality for expose, it is just information
-EXPOSE 80 # 
+EXPOSE 80 
 CMD ["nginx", "-g", "daemon off;"]
