--- a/ENTRYPOINT/Dockerfile
+++ b/ENTRYPOINT/Dockerfile
@@ -1,2 +1,5 @@
 FROM almalinux:9
-CMD ["ping","google.com"]
+# CMD ["ping","google.com"]
+#ENTRYPOINT ["ping","google.com"]
+CMD ["facebook.com"]
+ENTRYPOINT ["PING"]
