--- a/ENTRYPOINT/Dockerfile
+++ b/ENTRYPOINT/Dockerfile
@@ -1,5 +1,5 @@
 FROM almalinux:9
 # CMD ["ping","google.com"]
-#ENTRYPOINT ["ping","google.com"]
-CMD ["facebook.com"]
-ENTRYPOINT ["PING"]
+ENTRYPOINT ["ping","google.com"]
+# CMD ["facebook.com"]
+# ENTRYPOINT ["ping"]
