docker thoery EntryPoint

--- a/ENTRYPOINT/Dockerfile
+++ b/ENTRYPOINT/Dockerfile
@@ -1,5 +1,6 @@
 FROM almalinux:9
+CMD ["facebook.com"]
+ENTRYPOINT ["ping"]
+
 # CMD ["ping","google.com"]
-ENTRYPOINT ["ping","google.com"]
-# CMD ["facebook.com"]
-# ENTRYPOINT ["ping"]
+# ENTRYPOINT ["ping","google.com"]
