docker thoery workdir

--- a/WORKDIR/Dockerfile
+++ b/WORKDIR/Dockerfile
@@ -1,6 +1,6 @@
 FROM almalinux:9
 RUN mkdir /tmp/work-dir-demo
-WORKDIR /tmp/wprk-dir-demo
+WORKDIR /tmp/work-dir-demo
 RUN pwd
-RUN echo "Hello work directory">hello.text
+RUN echo "Hello work directory" > hello.text
 CMD ["sleep","100"]
